[package]
name = "nearby-glasses-native"
version = "0.1.0"
edition = "2021"
description = "Standalone native BLE smart-glasses detector inspired by Nearby Glasses"
license = "AGPL-3.0"

[features]
default = []
ble = ["dep:btleplug", "dep:tokio"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

btleplug = { version = "0.11", optional = true }
tokio = { version = "1.41", features = ["rt-multi-thread", "macros", "time"], optional = true }

[dev-dependencies]
pretty_assertions = "1.4"
